# unicas

./: README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  db.sqlite3  middlewares.py  pyproject.toml
backend/acciones/: admin.py  models.py  serializers.py  urls.py  views.py
backend/acciones/migrations/: 0001_initial.py  0002_accionpurchase_junta.py  0003_alter_accionpurchase_date.py
backend/agenda/: admin.py  models.py  serializers.py  urls.py  views.py
backend/agenda/migrations/: 0001_initial.py
backend/asambleas/: apps.py
backend/capital/: admin.py  models.py  serializers.py  urls.py  views.py
backend/capital/migrations/: 0001_initial.py  0002_gastocapital_ingresocapital.py  0003_alter_gastocapital_capital_social_and_more.py
backend/core/: settings.py  urls.py
backend/juntas/: admin.py  apps.py  models.py  serializers.py  unicas-uv.code-workspace  urls.py  views.py
backend/juntas/migrations/: 0001_initial.py  0002_junta_fecha_inicio_junta_periodo.py  0003_alter_junta_fecha_inicio.py  0004_alter_junta_duration_months.py
backend/multas/: admin.py  models.py  serializers.py  urls.py  views.py
backend/multas/migrations/: 0001_initial.py  0002_multa_junta.py  0003_alter_multa_junta.py  0004_alter_multa_reason.py  0005_alter_multa_status.py  0006_multa_comment.py  0007_alter_multa_comment.py
backend/prestamos/: admin.py  models.py  serializers.py  urls.py  views.py
backend/prestamos/migrations/: 0001_initial.py  (+16 more)
backend/users/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
(+3 files in other folders)
